--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -41,7 +41,14 @@
 
                 <div class="field-group">
                     <div class="field">
-                        <label for="phone">Telefone de contato</label>
+                        <label for="phone">Telefone de contato
+                            <div id="tool-tip">
+                                <img src="/icones/question_mark.png" alt="Help_phone" class="question-mark">
+                                <div class="tool-tip-box hide">
+                                    <p>Telefone fixo ou celular :)</p>
+                                </div>
+                            </div>                            
+                        </label>
                         <input type="tel" name="phone" placeholder="formato: 11987654222" maxlength="11" size="11" required>
                     </div>
                     <div class="field">
