fixing homes bg img

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,6 +2,7 @@
     background: url("../icones/home-background.svg") no-repeat;
     height: 100vh;
     background-position: 35vw bottom;
+    min-height: 860px;
 }
 
 #page-home .content {
